--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
+<div class="container">
+  <h1>Welcome to Bike Berlin</h1>
+  <%= image_tag("racebike.jpg", class: "img-responsive, product-image") %>
+</div>
