--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -63,6 +63,22 @@ Navigation
   color: #57ba98;
 }
 
+.navbar-inverse .navbar-toggle {
+  background-color: #fff;
+  border: none;
+}
+
+.navbar-inverse .navbar-toggle:hover,
+.navbar-inverse .navbar-toggle,
+.navbar-inverse .navbar-toggle:focus, {
+  background-color: #fff;
+  border: none;
+}
+
+.navbar-inverse .navbar-toggle .icon-bar {
+    background-color: #182628;
+}
+
 .cart {
   background-color: #57ba98;
 }
