--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nameofapp</title>
+    <title>Bike Berlin</title>
     <%= csrf_meta_tags %>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -23,24 +23,24 @@
             <span class="icon-bar"></span>
           </button>
           <div class="projectName navbar-brand">
-            <a href="#">Bike Berlin</a>
+            <a href="/">Bike Berlin</a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="#home">Home</a>
+              <a href="/" id="home">Home</a>
             </li>
             <li>
-              <a href="#products">Products</a>
+              <a href="products" id="products">Products</a>
             </li>
             <li>
-              <a href="#about">About</a>
+              <a href="#about" id="about">About</a>
             </li>
             <li>
-              <a href="#contact">Contact</a>
+              <a href="#contact" id="contact">Contact</a>
             </li>
-            <li class="cart">
+            <li class="cart" id="cart">
               <a href="#cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>My cart</a>
             </li>
           </ul>
