--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
-  <h1>Welcome to Bike Berlin</h1>
-  <%= image_tag("racebike.jpg", class: "img-responsive product-image") %>
+<div class="jumbotron jumbotron-fluid">
+<h1>Welcome to Bike Berlin</h1>
+<%= image_tag("racebike.jpg", class: "img-responsive jumbotron-image") %>
 </div>
