--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,18 +2,31 @@
 
 <h1>Products</h1>
 
-<div class="row">
+<div class="container-fluid">
+  <div class="row">
+    <% @products.each do |product| %>
+      <div class="col-sm-2 col-md-4">
+        <a href="#"><h1><%= product.name %></h1></a>
+        <p><%= product.description %></p>
+        <strong>$ 42</strong>
+      </div><!-- /col -->
+    <% end %>
+  </div>
+</div>
+
+<!-- <div class="row">
   <% @products.each do |product| %>
     <div-class="col">
       <table>
       <td><%= product.image_url %></td>
       <td><%= product.name %></td>
       <td><%= product.description %></td>
+      <td><%= product.colour %></td>
       <td><%= link_to 'Show', product %></td>
       <td><%= link_to 'Edit', edit_product_path(product) %></td>
       <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </table>
     </div>
-  <% end %>
+  <% end %> -->
 
 <%= link_to 'New Product', new_product_path %>
