--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -31,6 +31,11 @@
     <%= form.text_field :colour, id: :product_colour %>
   </div>
 
+  <div class="field">
+    <%= form.label :price %>
+    <%= form.text_field :price, id: :product_price %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
