--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,9 +6,10 @@
   <div class="row">
     <% @products.each do |product| %>
       <div class="col-sm-2 col-md-4">
+        <%= image_tag(product.image_url, class: "img-responsive") unless product.image_url.blank? %>
         <a href="#"><h1><%= product.name %></h1></a>
         <p><%= product.description %></p>
-        <strong>$ 42</strong>
+        <strong><%= product.price %></strong>
       </div><!-- /col -->
     <% end %>
   </div>
