--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,16 +32,16 @@
               <a href="/" id="home">Home</a>
             </li>
             <li>
-              <a href="products" id="products">Products</a>
+              <a href="/products" id="products">Products</a>
             </li>
             <li>
-              <a href="#about" id="about">About</a>
+              <a href="/simple_pages/about" id="about">About</a>
             </li>
             <li>
-              <a href="#contact" id="contact">Contact</a>
+              <a href="/simple_pages/contact" id="contact">Contact</a>
             </li>
             <li class="cart" id="cart">
-              <a href="#cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>My cart</a>
+              <a href="/cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>My cart</a>
             </li>
           </ul>
         </div>
