--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>Contact</h1>
-<p>This is the best Bike Shop ever.</p>
+<h1>About</h1>
+<div class="container">
+  <p>This is the best Bike Shop ever.</p>
+</div>
