--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,2 +1,4 @@
 <h1>Contact</h1>
-<p>Company Name</br>Street 123</br>10777 City</p>
+<div class="container">
+  <p>Company Name</br>Street 123</br>10777 City</p>
+</div>
