--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,14 +5,16 @@
 <div class="container-fluid">
   <div class="row">
     <% @products.each do |product| %>
+      <%= link_to(product) do %>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <div class="product_cell">
           <%= image_tag(product.image_url, class: "img-responsive product_image") unless product.image_url.blank? %>
-          <a href="#"><h2><%= product.name %></h2></a>
+          <h2><%= product.name %></h2>
           <p><%= product.description %></p>
           <strong><%= product.price %></strong>
         </div>
       </div><!-- /col -->
+    <% end %>
     <% end %>
   </div>
 </div>
