--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
               <a href="/simple_pages/contact" id="contact">Contact</a>
             </li>
             <li class="cart" id="cart">
-              <a href="/cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>My cart</a>
+              <a href="/orders"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>My cart</a>
             </li>
           </ul>
         </div>
