--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -45,6 +45,7 @@ h2 {
   font-family: 'Rubik', sans-serif;
   color: #182628;
   font-size: 1.5em;
+  margin-bottom: 0px;
 
 }
 
@@ -126,6 +127,43 @@ Content
   background-color: white;
   padding: 20px;
   margin-bottom: 30px;
+}
+
+.carousel-inner {
+  background-color: white;
+}
+
+.carousel-inner > .item > img{
+margin:auto;
+padding: 25px;
+}
+
+.carousel-control.left,
+.carousel-control.right {
+  background: none;
+  opacity: 1;
+}
+
+.carousel-control.left:hover,
+.carousel-control.right:hover {
+  background: none;
+  opacity: 1;
+}
+
+.carousel-control .glyphicon {
+  color: #182628;
+  opacity: 1;
+}
+
+.carousel-control .glyphicon:hover {
+  color: #57ba98;
+}
+
+.carousel-caption {
+    position: relative;
+    left: auto;
+    right: auto;
+    text-shadow: none;
 }
 
 /***
