--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -1,8 +1,8 @@
 <div id="carousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <% @products.each do |product| %>
-      <li data-target="#carousel" data-slide-to="<%= product.id-1 %>" class="<%= "active" if product == @products.first %>"></li>
+    <% @products.each_with_index do |product, index|%>
+      <li data-target="#carousel" data-slide-to="<%= index %>" class="<%= "active" if product == @products.first %>"></li>
     <% end %>
   </ol>
 
