--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,15 @@
 <h1>My cart</h1>
 <div class="container">
-  <p>Ordered products will be listed here.</p>
+    <div class="row">
+    <% @orders.each do |order| %>
+      <div class="col-sm-2 col-md-4">
+        <h1>
+          Order # <%= order.id %>:
+          <%= link_to order.product.name, order.product %>
+        </h1>
+        <p><%= order.product.description %></p>
+        <strong>$ <%= order.product.price %></strong>
+      </div><!-- /col -->
+    <% end %>
+  </div>
 </div>
