--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,14 @@
 <%= link_to(product) do %>
-  <div class="col-sm-6 col-md-4 col-lg-3">
+  <div class="col-sm-6 col-md-4 col-lg-3 product_column">
     <div class="product_cell">
-      <%= image_tag(product.image_url, class: "img-responsive product_image") unless product.image_url.blank? %>
+      <div class="image_container">
+      <%= if product.image_url.present?
+        image_tag(product.image_url, class: "img-responsive product_image")
+      else
+        image_tag('noproductimage.png', class: "img-responsive product_image")
+      end
+      %>
+      </div>
       <h2><%= product.name %></h2>
       <p><%= product.description %></p>
       <strong><%= product.price %></strong>
