--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -128,6 +128,13 @@ Content
   background-color: white;
   padding: 20px;
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.image_container {
+  align-self: center;
 }
 
 .carousel-inner {
