--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -2,12 +2,7 @@
   <div class="col-sm-6 col-md-4 col-lg-3 product_column">
     <div class="product_cell">
       <div class="image_container">
-      <%= if product.image_url.present?
-        image_tag(product.image_url, class: "img-responsive product_image")
-      else
-        image_tag('noproductimage.png', class: "img-responsive product_image")
-      end
-      %>
+        <%= render partial: "productimage", locals: {product: product} %>
       </div>
       <h2><%= product.name %></h2>
       <p><%= product.description %></p>
