--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -10,7 +10,7 @@
     <div class="carousel-inner" role="listbox">
       <% @products.each do |product| %>
         <div class="item<%= " active" if product == @products.first %>">
-          <%= image_tag(product.image_url) %>
+          <%= render partial: "products/productimage", locals: {product: product} %>
           <div class="carousel-caption">
             <h2><%= product.name %></h2>
           </div>
