--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,12 +3,11 @@
 <h1>Products</h1>
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="list">
     <% @products.each do |product| %>
       <%= render product %>
     <% end %>
   </div>
-</div>
 
 <!-- <div class="row">
   <% @products.each do |product| %>
