--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -6,9 +6,20 @@ General
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 50px 0 0 0;
   background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 50px);
+}
+
+.content {
+  flex: 1 0 auto;
 }
 
 p {
@@ -230,11 +241,12 @@ Footer
 ***/
 
 footer {
-  display: flex;
+  flex-shrink: 0;
   background-color: white;
   height: 50px;
   margin-top: 50px;
-  justify-content: flex-end;
-  align-items: flex-end;
   padding: 5px 15px 5px 15px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
