--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,43 +13,45 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="projectName navbar-brand">
-            <a href="/">Bike Berlin</a>
+    <div class="content">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="projectName navbar-brand">
+              <a href="/">Bike Berlin</a>
+            </div>
           </div>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="/" id="home">Home</a>
-            </li>
-            <li>
-              <a href="/products" id="products">Products</a>
-            </li>
-            <li>
-              <a href="/simple_pages/about" id="about">About</a>
-            </li>
-            <li>
-              <a href="/simple_pages/contact" id="contact">Contact</a>
-            </li>
-            <li class="cart" id="cart">
-              <a href="/orders"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>My cart</a>
-            </li>
-          </ul>
-        </div>
-      </div> <!-- end nav container-->
-    </nav>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="/" id="home">Home</a>
+              </li>
+              <li>
+                <a href="/products" id="products">Products</a>
+              </li>
+              <li>
+                <a href="/simple_pages/about" id="about">About</a>
+              </li>
+              <li>
+                <a href="/simple_pages/contact" id="contact">Contact</a>
+              </li>
+              <li class="cart" id="cart">
+                <a href="/orders"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>My cart</a>
+              </li>
+            </ul>
+          </div>
+        </div> <!-- end nav container-->
+      </nav>
 
-    <%= yield %>
-
+      <%= yield %>
+    </div>
+    </div>
     <footer>
       <p class="copyright">&copy; 2017 Bike Berlin<p>
     </footer>
