--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,10 +36,10 @@
                 <%= link_to "Products", products_path, id: "products" %>
               </li>
               <li>
-                <%= link_to "About", "simple_pages#about", id: "about" %>
+                <%= link_to "About", simple_pages_about_path, id: "about" %>
               </li>
               <li>
-                <%= link_to "Contact", "simple_pages#contact", id: "contact" %>
+                <%= link_to "Contact", simple_pages_contact_path, id: "contact" %>
               </li>
               <li class="cart" id="cart">
                 <%= link_to orders_path do %>
