--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,9 @@
 <h1>Editing Product</h1>
 
+<div class="container">
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<div class="product_link">
+  <%= link_to 'Back', @product %>
+</div>
+</div>
