--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New Product</h1>
 
-<%= render 'form', product: @product %>
-
-<%= link_to 'Back', products_path %>
+<div class="container">
+  <%= render 'form', product: @product %>
+  <div class="product_link">
+    <%= link_to 'Back', products_path %>
+  </div>
+</div>
