--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,6 +8,10 @@
       <%= render product %>
     <% end %>
   </div>
+  <div class="product_link">
+    <%= link_to 'Add new Product', new_product_path %>
+  </div>
+</div>
 
 <!-- <div class="row">
   <% @products.each do |product| %>
@@ -23,5 +27,4 @@
       </table>
     </div>
   <% end %>
-
-<%= link_to 'New Product', new_product_path %>-->
+-->
