--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,4 +1,20 @@
 <h1>Contact</h1>
+
 <div class="container">
-  <p>Company Name</br>Street 123</br>10777 City</p>
+  <%= flash[:notice] %>
+  <%= form_with(url:"/simple_pages/thank_you", method: "post", local: true) do |form| %>
+  <div class="form-group">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= form.label :email %>
+    <%= form.text_field :email, class: "form-control"%>
+  </div>
+  <div class="form-group">
+    <%= form.label :message %>
+    <%= form.text_area :message, class: "form-control", rows: 5 %>
+  </div>
+  <%= form.submit "Send", class: "btn btn-primary" %>
+  <% end %>
 </div>
