--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <div class="content">
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
@@ -52,6 +54,15 @@
               <li class="cart" id="cart">
                 <%= link_to orders_path do %>
                 <i class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></i>My Cart
+                <% end %>
+              </li>
+            </ul>
+            <ul class="nav pull-right">
+              <li>
+                <% if user_signed_in? %>
+                <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+                <% else %>
+                <%= link_to('Login', new_user_session_path) %>
                 <% end %>
               </li>
             </ul>
