--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             </div>
           </div>
           <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right mainmenu">
               <li>
                 <%= link_to "Home", root_path, id: "home" %>
               </li>
@@ -57,7 +57,7 @@
                 <% end %>
               </li>
             </ul>
-            <ul class="nav pull-right">
+            <ul class="nav navbar-nav login">
               <li>
                 <% if user_signed_in? %>
                 <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
