--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="form-group">
     <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control"%>
+    <%= form.email_field :email, class: "form-control", :required => true%>
   </div>
   <div class="form-group">
     <%= form.label :message %>
