--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,7 +4,7 @@
       <%= render partial: "productimage", locals: {product: product} %>
         <h2><%= product.name %></h2>
         <p><%= product.description %></p>
-        <strong><%= product.price %></strong>
+        <strong><%= product.price %>€</strong>
     </div>
 
 <% end %>
