--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,34 +1,52 @@
 <div class="container">
+  <div class="row">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-10">
+      <div class="back_link">
+        <%= link_to 'Back to product overview', products_path %>
+      </div>
+    </div>
+    <div class="col-md-1">
+    </div>
+  </div>
+  <div class="row product_detail">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-5">
+      <div class="product_detail_imagebox">
+      <%= render partial: "productimage", locals: {product: @product} %>
+      </div>
+    </div>
+    <div class="col-md-5">
+      <h2>
+        <%= @product.name %>
+      </h2>
+      <p>
+        <%= @product.description %>
+      </p>
 
-  <p id="notice"><%= notice %></p>
+      <p>
+        <%= @product.colour %>
+      </p>
 
-  <h1>
-    <%= @product.name %>
-  </h1>
-
-  <p>
-    <strong>Description:</strong>
-    <%= @product.description %>
-  </p>
-
-  <p>
-    <strong>Image url:</strong>
-    <%= @product.image_url %>
-  </p>
-
-  <p>
-    <strong>Color:</strong>
-    <%= @product.colour %>
-  </p>
-
-  <p>
-    <strong>Price:</strong>
-    <%= @product.price %>
-  </p>
-
-  <div class="product_link">
-    <%= link_to 'Edit', edit_product_path(@product) %> |
-    <%= link_to 'Back', products_path %>
+      <strong>
+        <%= @product.price %>€
+      </strong>
+    </div>
+    <div class="col-md-1">
+    </div>
   </div>
 
+  <div class="row">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-10">
+      <h3>User Reviews</h3>
+        <%= @product.highest_rating_comment %></br>
+        <%= @product.lowest_rating_comment %>
+    </div>
+    <div class="col-md-1">
+    </div>
+  </div>
 </div>
