--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
                 <%= link_to "Start", root_path, id: "home" %>
               </li>
               <li>
-                <%= link_to "Products", products_path, id: "products" %>
+                <%= link_to "Produkte", products_path, id: "products" %>
               </li>
               <li>
                 <%= link_to "About", simple_pages_about_path, id: "about" %>
