--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
   </head>
 
   <body>
-      <% if flash[:notice] %>
-        <div class="alert alert-success"><%= notice %></div>
-      <% end %>
-      <% if flash[:alert] %>
-        <div class="alert alert-warning"><%= alert %></div>
-      <% end %>
+    <% if flash[:notice] %>
+      <div class="alert alert-success"><%= notice %></div>
+    <% end %>
+    <% if flash[:alert] %>
+      <div class="alert alert-warning"><%= alert %></div>
+    <% end %>
 
     <div class="content">
       <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -37,10 +37,10 @@
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right mainmenu">
               <li>
-                <%= link_to "Start", root_path, id: "home" %>
+                <%= link_to "Home", root_path, id: "home" %>
               </li>
               <li>
-                <%= link_to "Produkte", products_path, id: "products" %>
+                <%= link_to "Products", products_path, id: "products" %>
               </li>
               <li>
                 <%= link_to "About", simple_pages_about_path, id: "about" %>
