--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,6 +30,8 @@
         <%= @product.colour %>
       </p>
 
+      <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+
       <strong>
         <%= @product.price %>€
       </strong>
@@ -43,8 +45,8 @@
     </div>
     <div class="col-md-10">
       <h3>User Reviews</h3>
-        <%= @product.highest_rating_comment %></br>
-        <%= @product.lowest_rating_comment %>
+        <%= render 'new_comment' %>
+        <%= render 'comments' %>
     </div>
     <div class="col-md-1">
     </div>
