--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -47,6 +47,7 @@
       <h3>User Reviews</h3>
         <%= render 'new_comment' %>
         <%= render 'comments' %>
+        <%= will_paginate @comments %>
     </div>
     <div class="col-md-1">
     </div>
