Add active status to navigation bar and style it

--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -171,6 +171,7 @@ Navigation
 .navbar-inverse .navbar-nav>.active>a:focus,
 .navbar-inverse .navbar-nav>.active>a:hover {
   color: #57ba98;
+  background-color: #f2f2f2;
 }
 
 .navbar-inverse .navbar-toggle {
